# ChangeLog for dev-perl/DBD-SQLite
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.36 2006/06/12 00:01:40 mcummings Exp $

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  DBD-SQLite-1.12.ebuild:
  Marking stable sparc

  06 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  DBD-SQLite-1.11.ebuild:
  Stable on amd64 for bug #135746.

  28 May 2006; Bryan Østergaard <kloeri@gentoo.org> DBD-SQLite-1.11.ebuild:
  Stable on alpha.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-DBD-SQLite-0.31, files/digest-DBD-SQLite-1.07,
  files/digest-DBD-SQLite-1.08, files/digest-DBD-SQLite-1.09,
  files/digest-DBD-SQLite-1.11, Manifest:
  Fixing SHA256 digest, pass four

*DBD-SQLite-1.12 (25 Apr 2006)

  25 Apr 2006; <mcummings@gentoo.org> +DBD-SQLite-1.12.ebuild:
  Version bump

  21 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  DBD-SQLite-1.11.ebuild:
  Stable on hppa

  08 Apr 2006; <mcummings@gentoo.org> DBD-SQLite-1.11.ebuild:
  Keywording ~mips, tested on raq2, bug 126684

  27 Mar 2006; Markus Rothe <corsair@gentoo.org> DBD-SQLite-1.11.ebuild:
  Stable on ppc64

  26 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  DBD-SQLite-1.11.ebuild:
  Stable on ppc.

  26 Mar 2006; Michael Cummings <mcummings@gentoo.org>
  DBD-SQLite-1.11.ebuild:
  60+ days, marking stable for sparc and x86

  13 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  DBD-SQLite-1.09.ebuild, DBD-SQLite-1.11.ebuild:
  Keyworded ~hppa wrt #112414

  10 Mar 2006; Aron Griffis <agriffis@gentoo.org> DBD-SQLite-1.11.ebuild:
  Mark 1.11 ~ia64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> DBD-SQLite-1.09.ebuild:
  Mark 1.09 stable on alpha

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> DBD-SQLite-1.09.ebuild:
  Stable on ppc64

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  DBD-SQLite-1.09.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>