@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/Attic/DBD-SQLite-1.11.ebuild,v 1.10 2006/06/06 19:14:47 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/Attic/DBD-SQLite-1.11.ebuild,v 1.11 2006/06/18 17:06:35 kloeri Exp $
 
 inherit perl-module eutils
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://cpan/authors/id/M/MS/MSERGEANT/${P}.tar.gz"
 
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
-KEYWORDS="alpha amd64 hppa ~ia64 ~mips ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 hppa ia64 ~mips ppc ppc64 sparc x86"
 IUSE=""
 SRC_TEST="do"
 
