@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/DBD-SQLite
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.36 2006/06/12 00:01:40 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/DBD-SQLite/ChangeLog,v 1.37 2006/06/18 17:06:35 kloeri Exp $
+
+  18 Jun 2006; Bryan Østergaard <kloeri@gentoo.org> DBD-SQLite-1.11.ebuild:
+  Stable on ia64.
 
   12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
   DBD-SQLite-1.12.ebuild:
